# ci-demo

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
docs/: CI_VIABILITY_REPORT.md  TEST_EXPLANATION.zh-TW.md  TEST_PLAN.zh-TW.md
src/app/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
src/app/pages/: AlgorithmsPage.cpp  AlgorithmsPage.h  ScanPage.cpp  ScanPage.h  SetupPage.cpp  SetupPage.h  ViewerPage.cpp  ViewerPage.h
src/app/resources/: dark.qss
src/app/widgets/: ImageView.cpp  ImageView.h  RoiEditorView.cpp  RoiEditorView.h  RoiGraphicsItem.cpp  RoiGraphicsItem.h
src/core/: Algorithm.h  AlgorithmRegistry.cpp  AlgorithmRegistry.h  Algorithms.cpp  Algorithms.h  CMakeLists.txt  InspectionEngine.cpp  InspectionEngine.h  InspectionPlan.cpp  InspectionPlan.h  InspectionSession.cpp  InspectionSession.h  ReportExporter.cpp  ReportExporter.h  Roi.cpp  Roi.h  RoiListModel.cpp  RoiListModel.h  ScanSimulator.cpp  ScanSimulator.h  SyntheticXraySource.cpp  SyntheticXraySource.h
tests/: CMakeLists.txt
tests/app/: tst_smoke_mainwindow.cpp
tests/core/: tst_algorithms.cpp  tst_exporter.cpp  tst_inspectionplan.cpp  tst_scansimulator.cpp  tst_syntheticxray.cpp
